add project without final ui