@@ -1,4 +1,4 @@
-package org.mx.project.management.controllers;
+package org.mx.project.management.controllers.views.auth;
 
 import java.io.IOException;
 import java.sql.Connection;
@@ -53,38 +53,47 @@ public class LoginServlet extends HttpServlet {
 		Connection conn = (Connection) req.getAttribute("conn");
 		UserService userService = new UserServiceImpl(conn);
 
+		/**
+		 * get parameters
+		 */
 		String password = req.getParameter("password");
 		String email = req.getParameter("email");
-
-		User user = new User();
-		user.setEmail(email);
-		user.setName(email);
-
+		
+		/**
+		 * validation
+		 */
 		Map<String, String> errors = new HashMap<>();
 
-		if (password == null || password.isBlank()) {
-			errors.put("password", "Password is required");
+		if (password == null || password.trim().isEmpty()) {
+		    errors.put("password", "Password is required");
 		}
 
-		if (email == null || email.isBlank()) {
-			errors.put("email", "Email is required");
+		if (email == null || email.trim().isEmpty()) {
+		    errors.put("email", "Email is required");
 		}
 
+		/**
+		 * return errors
+		 */
 		if (!errors.isEmpty()) {
 			resp.setContentType("application/json");
 			resp.setStatus(HttpServletResponse.SC_BAD_REQUEST);
 			resp.getWriter().write(new Gson().toJson(errors));
 			return;
 		}
-
+		
 		Optional<User> userO;
 		try {
 			userO = userService.findUserByEmail(email);
 
 			if (userO.isEmpty()) {
-				System.out.println("no existe este mail");
-				resp.setStatus(HttpServletResponse.SC_CONFLICT);
+				
+				// this user or email does not exists
+				// status 404
+				resp.setStatus(HttpServletResponse.SC_NOT_FOUND);
 				resp.getWriter().write("{\"message\":\"User does not exists\"}");
+				
+				
 			} else if (BCrypt.checkpw(password, userO.get().getPassword())) {
 				HttpSession session = req.getSession();
 				session.setAttribute("email", email);
@@ -93,16 +102,22 @@ public class LoginServlet extends HttpServlet {
 				emailCookie.setMaxAge(60 * 60);
 				emailCookie.setPath("/");
 				resp.addCookie(emailCookie);
+				
+				Cookie userIdCookie = new Cookie("userId", userO.get().getId().toString());
+				userIdCookie.setMaxAge(60 * 60);
+				userIdCookie.setPath("/");
+				resp.addCookie(userIdCookie);
 
+				// status 200
 				resp.setStatus(HttpServletResponse.SC_OK);
 				resp.getWriter().write("{\"message\":\"Login successful\"}");
 			} else {
-				System.out.println("Contraseña incorrecta");
+				
+				// status 401
 				resp.setStatus(HttpServletResponse.SC_UNAUTHORIZED);
 				resp.getWriter().write("{\"message\":\"Incorrect password\"}");
 			}
 		} catch (SQLException e) {
-			// TODO Auto-generated catch block
 			e.printStackTrace();
 		}
 
